@@ -1,3 +1,7 @@
+Thu Jul 31 01:11:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread.c (ruby_vm_specific_ptr): fix for reallocation.
+
 Fri Jul 25 23:24:07 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread_pthread.c (get_stack): subtract guard size.
